--- a/.travis.yml
+++ b/.travis.yml
@@ -39,7 +39,7 @@ before_script:
     travis_retry wget --no-check-certificate -O - $CMAKE_URL | tar --strip-components=1 -xz -C $TMPDIR/cmake
 
     mkdir -pv $TMPDIR/clang
-    CLANG_URl="http://llvm.org/releases/3.8.0/clang+llvm-3.8.0-x86_64-apple-darwin.tar.xz"
+    CLANG_URL="http://llvm.org/releases/3.8.0/clang+llvm-3.8.0-x86_64-apple-darwin.tar.xz"
     travis_retry wget --no-check-certificate -O - $CLANG_URL | tar --strip-components=1 -xJ -C $TMPDIR/clang
 
     export CMAKE=$TMPDIR/cmake/CMake.app/Contents/bin/cmake
