--- a/.travis.yml
+++ b/.travis.yml
@@ -11,12 +11,9 @@ addons:
   apt:
     sources:
       - ubuntu-toolchain-r-test
-      - llvm-toolchain-precise-3.8
     packages:
       - build-essential
       - binutils-gold
-      - clang-3.8
-      - clang++-3.8
 
 before_script:
 - git config --global user.email "ani07nov@gmail.com"
@@ -30,11 +27,13 @@ before_script:
     CMAKE_URL="https://cmake.org/files/v3.6/cmake-3.6.0-Linux-x86_64.tar.gz"
     travis_retry wget --no-check-certificate -O - $CMAKE_URL | tar --strip-components=1 -xz -C $TMPDIR/cmake
 
+    mkdir -pv $TMPDIR/clang
+    CLANG_URL="http://llvm.org/releases/3.8.0/clang+llvm-3.8.0-x86_64-linux-gnu-ubuntu-14.04.tar.xz"
+    travis_retry wget --no-check-certificate -O - $CLANG_URL | tar --strip-components=1 -xJ -C $TMPDIR/clang
+
     export CMAKE=$TMPDIR/cmake/bin/cmake
-    export CXXFLAGS="-stdlib=libc++"
-    export LDFLAGS=-lc++abi
-    export CC=/usr/bin/clang-3.8
-    export CXX=/usr/bin/clang++-3.8
+    export CC=$TMPDIR/clang/bin/clang
+    export CXX=$TMPDIR/clang/bin/clang++
 
   elif [ $TRAVIS_OS_NAME == 'osx' ]; then
     CMAKE_URL="http://cmake.org/files/v3.6/cmake-3.6.0-Darwin-x86_64.tar.gz"
@@ -45,8 +44,6 @@ before_script:
     travis_retry wget --no-check-certificate -O - $CLANG_URL | tar --strip-components=1 -xJ -C $TMPDIR/clang
 
     export CMAKE=$TMPDIR/cmake/CMake.app/Contents/bin/cmake
-    export CXXFLAGS="-stdlib=libc++"
-    export LDFLAGS=-lc++abi
     export CC=$TMPDIR/clang/bin/clang
     export CXX=$TMPDIR/clang/bin/clang++
   fi
@@ -62,7 +59,7 @@ script:
   $CMAKE -DLLVM_ENABLE_LIBCXX=ON -DCMAKE_BUILD_TYPE=Release -DLLVM_TARGETS_TO_BUILD=host -DCMAKE_INSTALL_PREFIX=$TMPDIR/cpt/llvm ../
   make -j$(nproc)
   make test
-  make install -j$(nproc)
+  make install -j$(python -c "import multiprocessing; print(multiprocessing.cpu_count())")
 
   ls $TMPDIR/cpt/llvm
 
